# cppex2

./: CMakeLists.txt  Candy.h  Cloth.cpp  Cloth.h  Fabric.h  Furniture.cpp  Furniture.h  Item.cpp  Item.h  KitchenUtensils.cpp  KitchenUtensils.h  Kitchenware.h  Makefile  MoviesAndBooks.cpp  MoviesAndBooks.h  TablesAndChairs.cpp  TablesAndChairs.h  example1  ikea.cpp  ikea.h
tests/: outb  outg  t  t1  t2  t3  t4  t5  testb  testg
